tests/baselines/reference/exportAssignmentConstrainedGenericType.errors.txt
tests/cases/conformance/externalModules/foo_1.ts(2,17): error TS2345: Argument of type 'true' is not assignable to parameter of type '{ a: string; b: number; }'.


==== tests/cases/conformance/externalModules/foo_1.ts (1 errors) ====
    import foo = require("./foo_0");
    var x = new foo(true); // Should error
                    ~~~~
!!! error TS2345: Argument of type 'true' is not assignable to parameter of type '{ {|a|0|}: string; {|b|1|}: number; }'.
!!! annotated symbol 0 /.src/tests/cases/conformance/externalModules/foo_0.ts:1:22
!!! annotated symbol 1 /.src/tests/cases/conformance/externalModules/foo_0.ts:1:33
    var y = new foo({a: "test", b: 42}); // Should be OK
    var z: number = y.test.b;
==== tests/cases/conformance/externalModules/foo_0.ts (0 errors) ====
    class Foo<T extends {a: string; b:number;}>{
    	test: T;
    	constructor(x: T){}
    }
    
    export = Foo;
    